# pdsutils

./: .gitignore  LICENSE  README.md  pdsutils.pyproj  pyproject.toml
src/pdsutils/: Vector6.py  __init__.py  file_reader.py  file_utils.py  max_relative_motion.py  model_setup.py  property_checker.py  realization_utils.py
tests/: test_max_relative_motion.py
